:sparkles: Created a11y autocomplete component
:sparkles: Created initial court selection/onboarding page

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "@ministryofjustice/frontend": "0.2.1",
+    "accessible-autocomplete": "^2.0.3",
     "agentkeepalive": "4.1.4",
     "applicationinsights": "1.8.10",
     "applicationinsights-native-metrics": "0.0.6",
