--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,13 @@ executors:
     docker:
       - image: circleci/node:14.16.0-browsers
     working_directory: ~/app
+  integration-tests:
+    docker:
+      - image: circleci/node:14.16.0-browsers
+      - image: bitnami/redis:5.0
+        environment:
+          ALLOW_EMPTY_PASSWORD=yes
+    working_directory: ~/app
 
 orbs:
   helm: circleci/helm@1.1.2
@@ -137,7 +144,7 @@ jobs:
           path: coverage
 
   integration_test:
-    executor: builder
+    executor: integration-tests
     steps:
       - checkout
       - attach_workspace:
