--- a/package.json
+++ b/package.json
@@ -78,25 +78,25 @@
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
     "compression": "1.7.4",
+    "connect-redis": "^5.1.0",
     "cookie-parser": "1.4.5",
     "cookie-session": "1.4.0",
     "csurf": "1.11.0",
     "debug": "4.3.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "express-request-id": "1.4.1",
     "express-session": "1.17.1",
     "govuk-frontend": "3.11.0",
     "helmet": "4.4.1",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "3.1.2",
-    "memorystore": "1.6.5",
     "moment": "2.29.1",
     "morgan": "1.10.0",
     "nock": "13.0.11",
     "nunjucks": "3.2.3",
     "passport": "0.4.1",
     "passport-oauth2": "1.5.0",
+    "redis": "^3.0.2",
     "superagent": "6.1.0"
   },
   "devDependencies": {
