--- a/package.json
+++ b/package.json
@@ -100,17 +100,17 @@
     "superagent": "6.1.0"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "7.0.0",
     "@pact-foundation/pact": "9.15.3",
     "axe-core": "4.1.3",
-    "cucumber": "6.0.5",
-    "cypress": "6.7.1",
+    "cypress": "6.8.0",
     "cypress-axe": "0.12.2",
     "cypress-cucumber-preprocessor": "4.0.1",
     "jest": "26.6.3",
     "jest-junit": "12.0.0",
     "jest-pact": "0.8.3",
     "minify": "7.0.1",
-    "mockdate": "3.0.3",
+    "mockdate": "3.0.4",
     "moxios": "0.4.0",
     "node-sass": "5.0.0",
     "nodemon": "2.0.7",
