Fix the CSP issue but remain a 404 error

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
     "cookie-session": "1.4.0",
+    "crypto": "1.0.1",
     "csurf": "1.11.0",
     "debug": "4.3.1",
     "dotenv": "8.2.0",
