--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -15,6 +15,7 @@ ingress:
   enable_whitelist: true
   host: prepare-a-case-dev.apps.live-1.cloud-platform.service.justice.gov.uk
   path: /
+  cert_secret: court-probation-dev-cert-secret
 
 env:
   COURT_CASE_SERVICE_URL: https://court-case-service-dev.apps.live-1.cloud-platform.service.justice.gov.uk
