--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   "devDependencies": {
     "@cucumber/cucumber": "7.0.0",
     "@pact-foundation/pact": "9.15.3",
+    "ajv": "7.2.3",
     "axe-core": "4.1.3",
     "cypress": "6.8.0",
     "cypress-axe": "0.12.2",
