--- a/package.json
+++ b/package.json
@@ -104,10 +104,11 @@
     "@cucumber/cucumber": "7.0.0",
     "@pact-foundation/pact": "9.15.3",
     "ajv": "7.2.3",
+    "ajv-errors": "3.0.0",
     "axe-core": "4.1.3",
     "cypress": "6.8.0",
     "cypress-axe": "0.12.2",
-    "cypress-cucumber-preprocessor": "4.0.1",
+    "cypress-cucumber-preprocessor": "4.0.3",
     "jest": "26.6.3",
     "jest-junit": "12.0.0",
     "jest-pact": "0.8.3",
