--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "stepDefinitions": "integration-tests/integration/"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "0.2.1",
-    "accessible-autocomplete": "^2.0.3",
+    "@ministryofjustice/frontend": "0.2.2",
+    "accessible-autocomplete": "2.0.3",
     "agentkeepalive": "4.1.4",
     "applicationinsights": "1.8.10",
     "applicationinsights-native-metrics": "0.0.6",
@@ -79,7 +79,7 @@
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
     "compression": "1.7.4",
-    "connect-redis": "^5.1.0",
+    "connect-redis": "5.1.0",
     "cookie-parser": "1.4.5",
     "cookie-session": "1.4.0",
     "crypto": "1.0.1",
@@ -98,12 +98,12 @@
     "nunjucks": "3.2.3",
     "passport": "0.4.1",
     "passport-oauth2": "1.5.0",
-    "redis": "^3.0.2",
+    "redis": "3.1.0",
     "superagent": "6.1.0"
   },
   "devDependencies": {
     "@cucumber/cucumber": "7.0.0",
-    "@pact-foundation/pact": "9.15.3",
+    "@pact-foundation/pact": "9.15.4",
     "axe-core": "4.1.3",
     "cypress": "6.8.0",
     "cypress-axe": "0.12.2",
@@ -112,7 +112,7 @@
     "jest-junit": "12.0.0",
     "jest-pact": "0.8.3",
     "minify": "7.0.1",
-    "mockdate": "3.0.4",
+    "mockdate": "3.0.5",
     "moxios": "0.4.0",
     "node-sass": "5.0.0",
     "nodemon": "2.0.7",
