--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -33,3 +33,11 @@ whitelist:
   ark-internet-1: "194.33.192.0/25"
   ark-internet-2: "194.33.196.0/25"
   moj-official-aws-preprod: "51.149.251.0/24"
+
+resources:
+  cpu:
+    limit: 1000m
+    request: 100m
+  memory:
+    limit: 1000Mi
+    request: 100Mi
