--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,15 +60,15 @@ commands:
 executors:
   deployer:
     docker:
-      - image: circleci/python:3
+      - image: cimg/python:3.9.2
     working_directory: ~/app
   builder:
     docker:
-      - image: circleci/node:14.16.0-browsers
+      - image: cimg/node:14.16.1-browsers
     working_directory: ~/app
   integration-tests:
     docker:
-      - image: circleci/node:14.16.0-browsers
+      - image: cimg/node:14.16.1-browsers
       - image: bitnami/redis:5.0
         environment:
           ALLOW_EMPTY_PASSWORD=yes
