--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prepare-a-case",
-  "version": "0.0.1",
+  "version": "1.0.0-beta",
   "description": "A service to allow probation staff to prepare court cases",
   "author": "MoJ D&T Probation in Court <probation-in-court-team@digital.justice.gov.uk>",
   "license": "MIT",
@@ -11,7 +11,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=14.16.0 <15.0.0"
+    "node": ">=14.16.1 <15.0.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
@@ -82,7 +82,6 @@
     "connect-redis": "5.1.0",
     "cookie-parser": "1.4.5",
     "cookie-session": "1.4.0",
-    "crypto": "1.0.1",
     "csurf": "1.11.0",
     "debug": "4.3.1",
     "dotenv": "8.2.0",
@@ -102,10 +101,10 @@
     "superagent": "6.1.0"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "7.0.0",
+    "@cucumber/cucumber": "7.1.0",
     "@pact-foundation/pact": "9.15.4",
-    "axe-core": "4.1.3",
-    "cypress": "6.8.0",
+    "axe-core": "4.1.4",
+    "cypress": "7.0.0",
     "cypress-axe": "0.12.2",
     "cypress-cucumber-preprocessor": "4.0.3",
     "jest": "26.6.3",
