--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,7 +214,8 @@ jobs:
       - run:
           name: Build docker image
           command: |
-            docker build --rm=false . \
+            docker build --pull \
+               --rm=false . \
                --tag "mojdigitalstudio/prepare-a-case:$APP_VERSION" \
                --label "maintainer=info@digital.justice.gov.uk" \
                --label "app.version=$APP_VERSION" \
