--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=14.16.1 <15.0.0"
+    "node": ">=14.17.0 <15.0.0 || >=16.2.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
@@ -69,7 +69,7 @@
     "stepDefinitions": "integration-tests/integration/"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "0.2.3",
+    "@ministryofjustice/frontend": "0.2.4",
     "accessible-autocomplete": "2.0.3",
     "agentkeepalive": "4.1.4",
     "applicationinsights": "2.0.0",
@@ -87,7 +87,7 @@
     "dotenv": "9.0.2",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "govuk-frontend": "3.11.0",
+    "govuk-frontend": "3.12.0",
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "3.1.2",
@@ -103,9 +103,9 @@
   "devDependencies": {
     "@cucumber/cucumber": "7.2.1",
     "@pact-foundation/pact": "9.15.5",
-    "ajv": "8.3.0",
+    "ajv": "8.4.0",
     "ajv-errors": "3.0.0",
-    "axe-core": "4.2.0",
+    "axe-core": "4.2.1",
     "cypress": "7.3.0",
     "cypress-axe": "0.12.2",
     "cypress-cucumber-preprocessor": "4.1.0",
