--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "axios-middleware": "0.3.1",
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
+    "cache-service-redis": "2.0.2",
     "compression": "1.7.4",
     "connect-redis": "5.2.0",
     "cookie-parser": "1.4.5",
@@ -98,7 +99,8 @@
     "passport": "0.4.1",
     "passport-oauth2": "1.5.0",
     "redis": "3.1.2",
-    "superagent": "6.1.0"
+    "superagent": "6.1.0",
+    "superagent-cache-plugin": "3.0.0-beta.1"
   },
   "devDependencies": {
     "@cucumber/cucumber": "7.2.1",
