--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "minify-js-css": "bash ./bin/minify-js-css",
     "start": "npm run css-build && npm run minify-js-css && node ./bin/www",
     "start:watch": "npx nodemon --exec npm run start --scripts-prepend-node-path",
-    "unit-test": "npx jest --config=./tests/jest.config.js --ci --detectOpenHandles --forceExit",
+    "unit-test": "npx jest --config=./tests/jest.config.js --ci --forceExit",
     "pact-test": "rm -rf pact && npx jest --config=./tests/jest.pact.config.js --ci",
     "record-build-info": "node ./bin/record-build-info"
   },
@@ -85,9 +85,9 @@
     "cookie-session": "1.4.0",
     "csurf": "1.11.0",
     "debug": "4.3.1",
-    "dotenv": "9.0.2",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
-    "express-session": "1.17.1",
+    "express-session": "1.17.2",
     "govuk-frontend": "3.12.0",
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
@@ -105,14 +105,14 @@
   "devDependencies": {
     "@cucumber/cucumber": "7.2.1",
     "@pact-foundation/pact": "9.15.5",
-    "ajv": "8.4.0",
+    "ajv": "8.5.0",
     "ajv-errors": "3.0.0",
     "axe-core": "4.2.1",
-    "cypress": "7.3.0",
+    "cypress": "7.4.0",
     "cypress-axe": "0.12.2",
     "cypress-cucumber-preprocessor": "4.1.0",
-    "jest": "26.6.3",
-    "jest-junit": "12.0.0",
+    "jest": "27.0.1",
+    "jest-junit": "12.1.0",
     "jest-pact": "0.9.0",
     "minify": "7.0.2",
     "mockdate": "3.0.5",
