⬆️ wiremock-standalone-2.27.2.jar → wiremock-jre8-standalone-2.28.1.jar
⬆️ cypress  7.4.0 → 7.5.0

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ jobs:
           key: dependencies-cache-{{ checksum "package.json" }}
       - run:
           name: Run wiremock
-          command: java -jar wiremock-standalone-2.27.2.jar --global-response-templating --port 9091
+          command: java -jar wiremock-jre8-standalone-2.28.1.jar --global-response-templating --port 9091
           background: true
       - run:
           name: Run the app
