--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,10 +147,18 @@ jobs:
     executor: integration-tests
     steps:
       - checkout
+      - mem/recall:
+          env_var: APP_VERSION
       - attach_workspace:
           at: ~/app
       - restore_cache:
           key: dependencies-cache-{{ checksum "package.json" }}
+      - run:
+          name: Build css
+          command: npm run css-build
+      - run:
+          name: Minify js and css
+          command: npm run minify-js-css
       - run:
           name: Run wiremock
           command: java -jar wiremock-jre8-standalone-2.28.1.jar --global-response-templating --port 9091
