--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "moxios": "0.4.0",
     "node-sass": "6.0.0",
     "nodemon": "2.0.7",
+    "redis-mock": "0.56.3",
     "standard": "16.0.3",
     "supertest": "6.1.3"
   }
