--- a/package.json
+++ b/package.json
@@ -108,14 +108,14 @@
     "axe-core": "4.2.3",
     "cypress": "7.5.0",
     "cypress-axe": "0.12.2",
-    "cypress-cucumber-preprocessor": "4.1.2",
+    "cypress-cucumber-preprocessor": "^4.0.0",
     "jest": "27.0.5",
     "jest-junit": "12.2.0",
     "jest-pact": "0.9.1",
     "minify": "7.0.2",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
-    "node-sass": "6.0.0",
+    "node-sass": "^6.0.1",
     "nodemon": "2.0.7",
     "redis-mock": "0.56.3",
     "standard": "16.0.3",
