--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "axe-core": "4.2.3",
     "cypress": "7.6.0",
     "cypress-axe": "0.12.2",
-    "cypress-cucumber-preprocessor": "^4.0.0",
+    "cypress-cucumber-preprocessor": "4.1.2",
     "jest": "27.0.5",
     "jest-junit": "12.2.0",
     "jest-pact": "0.9.1",
