--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
+    "express-validator": "6.12.0",
     "govuk-frontend": "3.13.0",
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
