:white_check_mark:  PIC-1752: temp fix for cert
Signed-off-by: katie-cawthorne <katie.cawthorne@digital.justice.gov.uk>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,6 +182,8 @@ jobs:
           path: integration-tests/screenshots
 
   pact:
+    environment:
+      PACT_BROKER_DISABLE_SSL_VERIFICATION: "true"
     executor: builder
     steps:
       - checkout
