--- a/package.json
+++ b/package.json
@@ -103,23 +103,23 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "7.3.1",
-    "@pact-foundation/pact": "9.16.1",
+    "@pact-foundation/pact": "^9.16.4",
     "ajv": "8.6.3",
     "ajv-errors": "3.0.0",
     "axe-core": "4.3.3",
     "cypress": "8.4.1",
     "cypress-axe": "0.13.0",
-    "cypress-cucumber-preprocessor": "4.2.0",
+    "cypress-cucumber-preprocessor": "^4.3.0",
     "jest": "27.2.1",
-    "jest-junit": "12.2.0",
+    "jest-junit": "^13.0.0",
     "jest-pact": "0.9.1",
     "minify": "7.1.0",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
-    "node-sass": "6.0.1",
+    "node-sass": "^6.0.1",
     "nodemon": "2.0.12",
     "redis-mock": "0.56.3",
-    "standard": "16.0.3",
+    "standard": "^16.0.4",
     "supertest": "6.1.6"
   }
 }
