--- a/helm_deploy/prepare-a-case/templates/ingress.yaml
+++ b/helm_deploy/prepare-a-case/templates/ingress.yaml
@@ -15,6 +15,8 @@ metadata:
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
     kubernetes.io/ingress.class: "modsec01"
+    external-dns.alpha.kubernetes.io/set-identifier: {{ $fullName }}-{{ .Release.Namespace }}-blue
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
 spec:
   tls:
     - hosts:
