--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "minify": "8.0.3",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
-    "node-sass": "7.0.0",
+    "node-sass": "^7.0.1",
     "nodemon": "2.0.15",
     "redis-mock": "0.56.3",
     "standard": "16.0.4",
