--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     "jwt-decode": "3.1.2",
     "moment": "2.29.1",
     "morgan": "1.10.0",
-    "nock": "13.2.1",
     "nunjucks": "3.2.3",
     "passport": "0.5.2",
     "passport-oauth2": "1.6.1",
@@ -117,6 +116,7 @@
     "minify": "8.0.3",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
+    "nock": "^13.2.4",
     "node-sass": "^7.0.1",
     "nodemon": "2.0.15",
     "redis-mock": "0.56.3",
