--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,25 +61,25 @@ commands:
 executors:
   deployer:
     docker:
-      - image: cimg/python:3.9.2
+      - image: cimg/python:3.9.11
     working_directory: ~/app
   builder:
     docker:
-      - image: cimg/node:14.18.1-browsers
+      - image: cimg/node:14.19.1-browsers
     working_directory: ~/app
   integration-tests:
     docker:
-      - image: cimg/node:14.18.1-browsers
-      - image: bitnami/redis:5.0
+      - image: cimg/node:14.19.1-browsers
+      - image: cimg/redis:5.0.14
         environment:
           ALLOW_EMPTY_PASSWORD=yes
     working_directory: ~/app
 
 orbs:
-  helm: circleci/helm@1.1.2
-  kubernetes: circleci/kubernetes@0.3.0
-  mem: circleci/rememborb@0.0.1
-  snyk: snyk/snyk@0.0.10
+  helm: circleci/helm@1.2.0
+  kubernetes: circleci/kubernetes@1.3.0
+  mem: circleci/rememborb@0.0.2
+  snyk: snyk/snyk@1.1.2
 
 _snyk_options: &snyk_options
   organization: "digital-probation-services"
