--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=14.18.1 <15.0.0 || >=16.11.1 <17.0.0",
-    "npm": ">=6.4.1 <7.0.0 || >=7.22.0"
+    "node": ">=16.14.0 <18.0.0",
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
@@ -70,10 +70,10 @@
     "stepDefinitions": "integration-tests/integration/"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "1.2.0",
+    "@ministryofjustice/frontend": "1.3.0",
     "accessible-autocomplete": "2.0.4",
     "agentkeepalive": "^4.2.1",
-    "applicationinsights": "2.2.2",
+    "applicationinsights": "2.3.1",
     "applicationinsights-native-metrics": "0.0.7",
     "axios": "0.26.1",
     "axios-middleware": "0.3.1",
@@ -93,7 +93,7 @@
     "helmet": "5.0.2",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "3.1.2",
-    "moment": "2.29.1",
+    "moment": "2.29.2",
     "morgan": "1.10.0",
     "nunjucks": "3.2.3",
     "passport": "0.5.2",
@@ -104,15 +104,15 @@
   "devDependencies": {
     "@cucumber/cucumber": "7.3.2",
     "@pact-foundation/pact": "9.17.3",
-    "ajv": "8.10.0",
+    "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
     "axe-core": "4.4.1",
-    "cypress": "9.5.2",
+    "cypress": "9.5.3",
     "cypress-axe": "0.14.0",
     "cypress-cucumber-preprocessor": "4.3.1",
     "jest": "27.5.1",
     "jest-junit": "13.0.0",
-    "jest-pact": "0.9.1",
+    "jest-pact": "0.9.3",
     "minify": "8.0.4",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
