--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "start:watch": "npx nodemon --exec npm run start --scripts-prepend-node-path",
     "unit-test": "npx jest --config=./tests/jest.config.js --ci --forceExit",
     "pact-test": "rm -rf pact && npx jest --config=./tests/jest.pact.config.js --ci",
-    "record-build-info": "node ./bin/record-build-info"
+    "record-build-info": "node ./bin/record-build-info",
+    "prepare": "husky install"
   },
   "config": {
     "pact_do_not_track": true
@@ -110,6 +111,7 @@
     "cypress": "9.5.4",
     "cypress-axe": "0.14.0",
     "cypress-cucumber-preprocessor": "4.3.1",
+    "husky": "8.0.1",
     "jest": "27.5.1",
     "jest-junit": "13.2.0",
     "jest-pact": "0.9.3",
