--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -5,7 +5,7 @@ minReplicaCount: 1
 maxReplicaCount: 1
 
 image:
-  repository: docker.io/mojdigitalstudio/prepare-a-case
+  repository: quay.io/hmpps/prepare-a-case
   tag: latest
   pullPolicy: Always
   port: 3000
