--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   "dependencies": {
     "@ministryofjustice/frontend": "1.4.2",
     "accessible-autocomplete": "2.0.4",
-    "agentkeepalive": "^4.2.1",
+    "agentkeepalive": "4.2.1",
     "applicationinsights": "2.3.3",
     "applicationinsights-native-metrics": "0.0.7",
     "axios": "0.27.2",
@@ -88,8 +88,8 @@
     "dotenv": "16.0.1",
     "express": "4.18.1",
     "express-session": "1.17.3",
-    "express-validator": "6.14.0",
-    "govuk-frontend": "4.0.1",
+    "express-validator": "6.14.1",
+    "govuk-frontend": "4.1.0",
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "3.1.2",
@@ -98,11 +98,11 @@
     "nunjucks": "3.2.3",
     "passport": "0.6.0",
     "passport-oauth2": "1.6.1",
-    "redis": "3.1.2",
-    "superagent": "7.1.3"
+    "redis": "4.1.0",
+    "superagent": "7.1.6"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "8.2.1",
+    "@cucumber/cucumber": "8.2.2",
     "@pact-foundation/pact": "9.17.3",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
@@ -110,14 +110,14 @@
     "cypress": "9.7.0",
     "cypress-axe": "0.14.0",
     "cypress-cucumber-preprocessor": "4.3.1",
-    "jest": "28.1.0",
+    "jest": "28.1.1",
     "jest-junit": "13.2.0",
     "jest-pact": "0.9.4",
-    "minify": "8.0.4",
+    "minify": "9.1.0",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
-    "nock": "^13.2.4",
-    "node-sass": "^7.0.1",
+    "nock": "13.2.6",
+    "node-sass": "7.0.1",
     "nodemon": "2.0.16",
     "redis-mock": "0.56.3",
     "standard": "17.0.0",
