PIC-2175 fix lint

--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "ext": "js,html,njk,scss"
   },
   "standard": {
+    "env":  [
+      "jest"
+    ],
     "ignore": [
       "/public/**/*.js",
       "/integration-tests/config",
