--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "moxios": "0.4.0",
     "nock": "^13.2.4",
     "node-sass": "^7.0.1",
-    "nodemon": "2.0.15",
+    "nodemon": "^1.3.3",
     "redis-mock": "0.56.3",
     "standard": "17.0.0",
     "supertest": "6.2.2"
