--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -23,6 +23,7 @@ env:
   NOMIS_AUTH_URL: https://sign-in.hmpps.service.justice.gov.uk/auth
   USER_PREFERENCE_SERVICE_URL: https://hmpps-user-preferences.hmpps.service.justice.gov.uk
   CASE_SNAPSHOT_TIMES: "00:00,08:45,09:45"
+  ENABLE_PAST_CASES_NAVIGATION: false
 
 whitelist:
   office: "217.33.148.210/32"
