--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,7 @@ jobs:
           background: true
       - run:
           name: Run the app
-          command: npm run start-feature
+          command: ENABLE_CASE_COMMENTS=true npm run start-feature
           background: true
       - run:
           name: Wait for node app to start
