--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -22,7 +22,8 @@ env:
   NOMIS_AUTH_URL: https://sign-in-preprod.hmpps.service.justice.gov.uk/auth
   USER_PREFERENCE_SERVICE_URL: https://hmpps-user-preferences-preprod.hmpps.service.justice.gov.uk
   CASE_SNAPSHOT_TIMES: "00:00,08:45,09:45,10:15,10:45,11:15,11:45,12:15,12:45,13:15,13:45,14:15,14:45,15:15,15:45,16:15,16:45,17:15,17:45"
-  ENABLE_PAST_CASES_NAVIGATION: false
+  ENABLE_PAST_CASES_NAVIGATION: true
+  ENABLE_CASE_COMMENTS: true
 
 whitelist:
   office: "217.33.148.210/32"
