PIC-2400: implement case progress

--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -25,6 +25,7 @@ env:
   CASE_SNAPSHOT_TIMES: "00:00,08:45,09:45"
   ENABLE_PAST_CASES_NAVIGATION: false
   ENABLE_CASE_COMMENTS: false
+  ENABLE_CASE_PROGRESS: false
 
 whitelist:
   office: "217.33.148.210/32"
