--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -24,6 +24,7 @@ env:
   CASE_SNAPSHOT_TIMES: "00:00,08:45,09:45,10:15,10:45,11:15,11:45,12:15,12:45,13:15,13:45,14:15,14:45,15:15,15:45,16:15,16:45,17:15,17:45"
   ENABLE_PAST_CASES_NAVIGATION: true
   ENABLE_CASE_COMMENTS: true
+  ENABLE_CASE_PROGRESS: true
 
 whitelist:
   dac: "194.75.245.154"
