--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -18,6 +18,7 @@ ingress:
   path: /
 
 env:
+  PAC_ENV: prod
   COURT_CASE_SERVICE_URL: https://court-case-service.apps.live-1.cloud-platform.service.justice.gov.uk
   CASES_PER_PAGE: 20
   NOMIS_AUTH_URL: https://sign-in.hmpps.service.justice.gov.uk/auth
