PIC-2478 pass userlist thorough helm

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -26,6 +26,7 @@ env:
   ENABLE_PAST_CASES_NAVIGATION: true
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
+  CASE_TRACKING_PRE_PILOT_USERS: All
 
 whitelist:
   dac: "194.75.245.154"
