--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -26,6 +26,7 @@ env:
   ENABLE_PAST_CASES_NAVIGATION: true
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
+  CASE_TRACKING_PRE_PILOT_USERS: joana.aguia,tony.howard
 
 whitelist:
   office: "217.33.148.210/32"
