--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -24,9 +24,9 @@ env:
   NOMIS_AUTH_URL: https://sign-in.hmpps.service.justice.gov.uk/auth
   USER_PREFERENCE_SERVICE_URL: https://hmpps-user-preferences.hmpps.service.justice.gov.uk
   CASE_SNAPSHOT_TIMES: "00:00,08:45,09:45"
-  ENABLE_PAST_CASES_NAVIGATION: false
-  ENABLE_CASE_COMMENTS: false
-  ENABLE_CASE_PROGRESS: false
+  ENABLE_PAST_CASES_NAVIGATION: true
+  ENABLE_CASE_COMMENTS: true
+  ENABLE_CASE_PROGRESS: true
 
 whitelist:
   office: "217.33.148.210/32"
