--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "3.1.2",
+    "modal-vanilla": "^0.12.0",
     "moment": "2.29.4",
     "morgan": "1.10.0",
     "nunjucks": "3.2.3",
