--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "nodemon": "^2.0.19",
     "redis-mock": "0.56.3",
     "standard": "17.0.0",
-    "supertest": "6.2.2"
+    "supertest": "6.2.2",
+    "wiremock-rest-client": "^1.10.0"
   }
 }
