--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -27,6 +27,7 @@ env:
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
   CASE_TRACKING_PRE_PILOT_USERS: ***REMOVED***,***REMOVED***
+  CASE_SEARCH_USERS: all
 
 whitelist:
   office: "217.33.148.210/32"
