--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -26,6 +26,7 @@ env:
   ENABLE_PAST_CASES_NAVIGATION: true
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
+  ENABLE_APP_INSIGHTS: true
   CASE_TRACKING_PRE_PILOT_USERS: All
   CASE_SEARCH_USERS: all
 
