--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -27,6 +27,7 @@ env:
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
+  ENABLE_HEARING_OUTCOMES: true
   CASE_TRACKING_PRE_PILOT_USERS: All
   CASE_SEARCH_USERS: all
 
