🩹 PR comments and env settings

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -27,7 +27,7 @@ env:
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
-  ENABLE_HEARING_OUTCOMES: true
+  ENABLE_HEARING_OUTCOMES: false
   CASE_TRACKING_PRE_PILOT_USERS: joana.aguia,tony.howard
   CASE_SEARCH_USERS: all
 
