🛠 PIC-2945: Add Global Protect IP to allow list

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -41,6 +41,7 @@ whitelist:
   ark-internet-1: "194.33.192.0/25"
   ark-internet-2: "194.33.196.0/25"
   moj-official-aws-preprod: "51.149.251.0/24"
+  global-protect: "35.176.93.186/32"
 
 resources:
   cpu:
