--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -42,6 +42,7 @@ whitelist:
   ark-internet-1: "194.33.192.0/25"
   ark-internet-2: "194.33.196.0/25"
   moj-official-aws-prod: "51.149.250.0/24"
+  global-protect: "35.176.93.186/32"
 
 resources:
   cpu:
