PIC-2606 user serverside paging

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -30,6 +30,7 @@ env:
   ENABLE_HEARING_OUTCOMES: true
   CASE_TRACKING_PRE_PILOT_USERS: All
   CASE_SEARCH_USERS: all
+  ENABLE_SERVERSIDE_PAGING: true
 
 whitelist:
   dac: "194.75.245.154"
