--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -30,6 +30,7 @@ env:
   ENABLE_HEARING_OUTCOMES: false
   CASE_TRACKING_PRE_PILOT_USERS: joana.aguia,tony.howard
   CASE_SEARCH_USERS: all
+  ENABLE_SERVERSIDE_PAGING: true
 
 whitelist:
   office: "217.33.148.210/32"
