--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -31,6 +31,7 @@ env:
   ENABLE_HEARING_OUTCOMES: false
   CASE_TRACKING_PRE_PILOT_USERS: ZAP37S,BEVERLEYWILLMOTTNPS,ZRX14Y,wyi97r,mdy87w,sarahclarkenps,bethanylilleynps,jenniferrawlingsnps,maxholgatenps,wjf65j,xzu68s,CZE89A,serenacannannps
   CASE_SEARCH_USERS: all
+  ENABLE_SERVERSIDE_PAGING: false
 
 whitelist:
   office: "217.33.148.210/32"
