--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -31,6 +31,7 @@ env:
   ENABLE_HEARING_OUTCOMES: false
   CASE_TRACKING_PRE_PILOT_USERS: ***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***
   CASE_SEARCH_USERS: all
+  ENABLE_SERVERSIDE_PAGING: false
 
 whitelist:
   office: "217.33.148.210/32"
