--- a/package.json
+++ b/package.json
@@ -97,7 +97,9 @@
     "nunjucks": "3.2.3",
     "passport": "0.6.0",
     "passport-oauth2": "1.6.1",
+    "qs": "^6.9.7",
     "redis": "3.1.2",
+    "semver": "^7.5.2",
     "superagent": "7.1.3"
   },
   "devDependencies": {
