--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -27,8 +27,8 @@ env:
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
-  ENABLE_HEARING_OUTCOMES: false
-  CASE_TRACKING_PRE_PILOT_USERS: ***REMOVED***,***REMOVED***
+  ENABLE_HEARING_OUTCOMES: true
+  CASE_TRACKING_PRE_PILOT_USERS: ***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: true
 
