fixed caching issue

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "int-test:ui": "npx cypress open",
     "lint": "npx standard",
     "css-build": "bash ./bin/build-css",
-    "minify-js-css": "bash ./bin/minify-js-css && npm run build:external",
-    "build:external": "webpack --mode production",
+    "minify-js-css": "bash ./bin/minify-js-css",
     "start": "npm run css-build && npm run minify-js-css && node ./bin/www",
     "start:watch": "npx nodemon --exec npm run start --scripts-prepend-node-path",
     "unit-test": "npx jest --config=./tests/jest.config.js --ci --forceExit",
