--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -30,7 +30,7 @@ env:
   ENABLE_HEARING_OUTCOMES: true
   CASE_TRACKING_PRE_PILOT_USERS: joana.aguia,tony.howard,tfe58u,ravishankar.challapalli
   CASE_SEARCH_USERS: all
-  ENABLE_SERVERSIDE_PAGING: true
+  ENABLE_SERVERSIDE_PAGING: false
 
 whitelist:
   office: "217.33.148.210/32"
