--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -28,7 +28,7 @@ env:
   ENABLE_CASE_COMMENTS: true
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
-  ENABLE_HEARING_OUTCOMES: false
+  ENABLE_HEARING_OUTCOMES: true
   CASE_TRACKING_PRE_PILOT_USERS: ***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: false
