--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "2.3.3",
     "applicationinsights-native-metrics": "0.0.7",
-    "axios": "0.26.1",
-    "axios-middleware": "0.3.1",
+    "axios": "^1.6.0",
+    "axios-middleware": "^0.3.1",
     "bootstrap": "^5.3.2",
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
@@ -105,7 +105,7 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "8.1.2",
-    "@pact-foundation/pact": "9.17.3",
+    "@pact-foundation/pact": "^11.0.2",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
     "axe-core": "4.4.1",
@@ -113,9 +113,9 @@
     "cypress-axe": "0.14.0",
     "cypress-cucumber-preprocessor": "4.3.1",
     "husky": "8.0.1",
-    "jest": "27.5.1",
+    "jest": "^29.0.0",
     "jest-junit": "13.2.0",
-    "jest-pact": "0.9.3",
+    "jest-pact": "^0.10.0",
     "minify": "8.0.4",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
