--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -29,7 +29,7 @@ env:
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
   ENABLE_HEARING_OUTCOMES: true
-  CASE_TRACKING_PRE_PILOT_USERS: ZAP37S,BEVERLEYWILLMOTTNPS,ZRX14Y,wyi97r,mdy87w,sarahclarkenps,bethanylilleynps,jenniferrawlingsnps,maxholgatenps,wjf65j,xzu68s,CZE89A,serenacannannps,qgd46q
+  CASE_TRACKING_PRE_PILOT_USERS: ZAP37S,BEVERLEYWILLMOTTNPS,ZRX14Y,wyi97r,mdy87w,sarahclarkenps,bethanylilleynps,jenniferrawlingsnps,maxholgatenps,wjf65j,xzu68s,CZE89A,serenacannannps,qgd46q,santoshchakrabartnps
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: false
 
