PIC-3509 enable serverside paging in prod (#833)

--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -31,7 +31,7 @@ env:
   ENABLE_HEARING_OUTCOMES: true
   CASE_TRACKING_PRE_PILOT_USERS: ***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***
   CASE_SEARCH_USERS: all
-  ENABLE_SERVERSIDE_PAGING: false
+  ENABLE_SERVERSIDE_PAGING: true
 
 whitelist:
   office: "217.33.148.210/32"
