Pic 3487 outcomes pagination (#836)
* PIC-3487 outcomes pagination

* PIC-3487 add cypress tests

* PIC-3487 fix cypress tests

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -28,7 +28,7 @@ env:
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
   ENABLE_HEARING_OUTCOMES: true
-  CASE_TRACKING_PRE_PILOT_USERS: ***REMOVED***,***REMOVED***,***REMOVED***,***REMOVED***
+  CASE_TRACKING_PRE_PILOT_USERS: joana.aguia,tony.howard,tfe58u,ravishankar.challapalli
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: true
 
