--- a/package.json
+++ b/package.json
@@ -108,9 +108,9 @@
     "@pact-foundation/pact": "9.17.3",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
-    "axe-core": "4.4.1",
+    "axe-core": "^4.4.1",
     "cypress": "^13.6.1",
-    "cypress-axe": "0.14.0",
+    "cypress-axe": "^1.5.0",
     "cypress-cucumber-preprocessor": "4.3.1",
     "husky": "8.0.1",
     "jest": "27.5.1",
