PIC-3536: upgraded cypress to v13 and rewritten failing tests (#842)
* PIC-3536: upgraded cypress to v13 and rewritten failing tests

* PIC-3536: upgraded cypress dependencies

* PIC-3536: let cypress determine browser on cmd line

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start-feature": "PORT=3007 NODE_ENV=development NOTIFICATION_USERNAME=test NOTIFICATION_PASSWORD=test ENABLE_CASE_COMMENTS=true ENABLE_CASE_PROGRESS=true ENABLE_APP_INSIGHTS=true ENABLE_HEARING_OUTCOMES=true HEARING_OUTCOMES_PAGE_SIZE=2 PAC_ENV=dev node $NODE_DEBUG_OPTION ./bin/www | bunyan -o short",
-    "start-feature:dev": "PORT=3007 NOMIS_AUTH_URL=http://localhost:9091/auth NODE_ENV=development NOTIFICATION_USERNAME=test NOTIFICATION_PASSWORD=test HEARING_OUTCOMES_PAGE_SIZE=2 nodemon $NODE_DEBUG_OPTION ./bin/www | bunyan -o short",
+    "start-feature:dev": "PORT=3007 NOMIS_AUTH_URL=http://localhost:9091/auth NODE_ENV=development NOTIFICATION_USERNAME=test NOTIFICATION_PASSWORD=test ENABLE_HEARING_OUTCOMES=true HEARING_OUTCOMES_PAGE_SIZE=2 nodemon $NODE_DEBUG_OPTION ./bin/www | bunyan -o short",
     "delete:reports": "rm ./test-results/cypress/* || true",
     "preint-test": "npm run delete:reports",
     "preint-test:dev": "npm run delete:reports",
@@ -108,9 +108,9 @@
     "@pact-foundation/pact": "9.17.3",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
-    "axe-core": "4.4.1",
-    "cypress": "^9.7.0",
-    "cypress-axe": "0.14.0",
+    "axe-core": "^4.4.1",
+    "cypress": "^13.6.1",
+    "cypress-axe": "^1.5.0",
     "cypress-cucumber-preprocessor": "4.3.1",
     "husky": "8.0.1",
     "jest": "27.5.1",
