--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,11 +81,11 @@ services:
       - COURT_CASE_SERVICE_URL=http://court-case-service:8080
       - NOTIFICATION_USERNAME=test 
       - NOTIFICATION_PASSWORD=test 
-      - HEARING_OUTCOMES_PAGE_SIZE=2
-      - ENABLE_CASE_COMMENTS=true
-      - ENABLE_CASE_PROGRESS=true
+      - HEARING_OUTCOMES_PAGE_SIZE=${HEARING_OUTCOMES_PAGE_SIZE:-2}
+      - ENABLE_CASE_COMMENTS=${ENABLE_CASE_COMMENTS:-true}
+      - ENABLE_CASE_PROGRESS=${ENABLE_CASE_PROGRESS:-true}
       - ENABLE_HEARING_OUTCOMES=${ENABLE_HEARING_OUTCOMES:-true}
-      - ENABLE_PAST_CASES_NAVIGATION=false
+      - ENABLE_PAST_CASES_NAVIGATION=${ENABLE_PAST_CASES_NAVIGATION:-false}
     env_file:
       - .env
     networks:
