--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "test": "npm run test:lint && npm run test:unit && npm run test:pact && npm run test:int",
     "test:lint": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/standard",
     "test:lint:fix": "npm run test:lint -- --fix",
-    "test:unit": "docker exec -it -e ENABLE_HEARING_OUTCOMES=false prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit",
+    "test:unit": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit",
     "test:pact": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit",
-    "test:int": "docker exec -it prepare-a-case-cypress cypress run --browser chrome --config-file=cypress/cypress.config.js"
+    "test:int": "docker exec -it prepare-a-case-cypress cypress run --config-file=cypress/cypress.config.js"
   },
   "config": {
     "pact_do_not_track": true
