--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "scripts": {
-    "start": "DISPLAY= docker compose up",
+    "start": "IP=$(ipconfig getifaddr en0) && /usr/X11/bin/xhost + $IP && DISPLAY=$IP:0 docker compose up",
     "start:detached": "npm run start -- --wait -d",
     "stop": "docker compose down",
     "build": "docker compose pull && docker compose build",
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@ministryofjustice/frontend": "1.4.1",
+    "@splidejs/splide": "^4.1.4",
     "accessible-autocomplete": "^2.0.4",
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "2.9.2",
